--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">PHP</h6>
+                            <h6 class="font-weight-bold">PHPP</h6>
                             <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress">
