Modifications stages et cours

--- a/index.html
+++ b/index.html
@@ -88,12 +88,10 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Développement, Intelligence Artificielle </div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="" class="btn btn-outline-light mr-5">Téléchargez mon CV</a>
-                        <!-- <button type="button" class="btn-play" data-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
+                        <a href="pj\Lilian Berthelot CV.pdf" target="_blank" class="btn btn-outline-light mr-5">Consultez mon CV</a>
                             <span></span>
                         </button>
-                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5> -->
+                        <!-- <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5> -->
                     </div>
                 </div>
             </div>
@@ -115,7 +113,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Développeur & I.A</h3>
-                    <p>T'as crempté ?</p>
+                    
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2">
                             <h6>Nom: <span class="text-secondary">Lilian BERTHELOT</span></h6>
@@ -133,7 +131,7 @@
                             <h6>Email: <span class="text-secondary">lilian.berthelot@outlook.fr</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Status: <span class="text-secondary">Stagiaire chez Another Brain 🧠</span></h6>
+                            <h6>Status: <span class="text-secondary">Stagiaire développement modélisation chez Another Brain 🧠</span></h6>
                         </div>
                     </div>
                     <!-- <a href="" class="btn btn-outline-primary mr-4">Découvrez moi</a>
@@ -149,8 +147,8 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Scolarité</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Scolarité</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Expériences</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Expériences</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -159,61 +157,60 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
-                                ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
-                                stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Master Informatique Intelligence Artificielle</h5>
+                            <p class="mb-2"><strong>Université de Reims Champagne</strong> | <small>2021 - 2023</small></p>
+                            <p>Formation continue en 2 ans autour des métiers du développement 
+                                d'intelligence artificielle et d'analyse et collectes de données.  </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
-                                ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
-                                stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">3ème année Licence Informatique parcours passerelle</h5>
+                            <p class="mb-2"><strong>Université de Reims Champagne-Ardenne </strong> | <small>2019 - 2020</small></p>
+                            <p>Formation continue avec projet de groupe de fin d'année. Vaste enseignement sur l'informatiques
+                                et la programmation en générale.
+                            </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Master In CSE</h5>
-                            <p class="mb-2"><strong>Cambridge University</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
-                                ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
-                                stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">BTS Services informatiques aux organisations</h5>
+                            <p class="mb-2"><strong>Lycée Franklin Roosevelt</strong> | <small>2017 - 2019</small></p>
+                            <p>Formation continue sur 2 ans, avec un stage de 1 mois par an, permettant de  de travailler sur des applications Web PHP, HTML, CSS, JS
+                                et natives en C, C#, JAVA et Python.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="mb-4">Mes stages</h3>
+                    <h3 class="mb-4">Mes expériences professionnelles</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
-                                ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
-                                stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Stagiaire développeur d'intelligence décisionnelle</h5>
+                            <p class="mb-2"><strong>Another Brain</strong> | <small>03/04 - 31/08 2023 </small></p>
+                            <p>Modélisation 3D pour la visualisation et l'élaboration de dataset pour tester la partie 
+                                traitement d'image d'un programme d'intelligence artificielle. Python et Blender.
+                            </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
-                                ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
-                                stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Stagiaire intelligence artificielle</h5>
+                            <p class="mb-2"><strong>Adjan IT</strong> | <small>07/04 - 08/06 2022</small></p>
+                            <p>Création et intégration d'un outil de résumé d'article utilisant un modèle de text-to-text transfer transformer.
+                                Élaboration d'un outil de traitement d'image pour détecter des logos d'entreprises. Python, JS, Typescript.
+                            </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Soft Company</strong> | <small>2000 - 2050</small></p>
-                            <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
-                                ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
-                                stet lorem diam</p>
+                            <h5 class="font-weight-bold mb-1">Pilote à la conduite d'activité</h5>
+                            <p class="mb-2"><strong>Orange</strong> | <small>15/03 - 01/09 2021</small></p>
+                            <p>Contrat d'intérimaire. Coordination d'équipes d'interventions rétablissement réseau.
+                                Communication Opérationnelle et Suivi des Anomalies.
+                            </p>
                         </div>
                     </div>
                 </div>
