adding simple black effect

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Lilian BERTHELOT</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Développement, Intelligence Artificielle </div>
+                    <div class="typed-text d-none">Développement, Intelligence Artificielle, Game Design </div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="pj\Lilian Berthelot CV.pdf" target="_blank" class="btn btn-outline-light mr-5">Consultez mon CV</a>
                             <span></span>
@@ -131,7 +131,7 @@
                             <h6>Email: <span class="text-secondary">lilian.berthelot@outlook.fr</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Status: <span class="text-secondary">Stagiaire développement modélisation chez Another Brain 🧠</span></h6>
+                            <h6>Status: <span class="text-secondary">Demandeur d'emploi</span></h6>
                         </div>
                     </div>
                     <!-- <a href="" class="btn btn-outline-primary mr-4">Découvrez moi</a>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">PHPP</h6>
+                            <h6 class="font-weight-bold">PHP</h6>
                             <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress">
@@ -264,8 +264,8 @@
                 <div class="col-md-6">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Javascript</h6>
-                            <h6 class="font-weight-bold">90%</h6>
+                            <h6 class="font-weight-bold">C/C#</h6>
+                            <h6 class="font-weight-bold">85%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0"
@@ -274,8 +274,8 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Angular JS</h6>
-                            <h6 class="font-weight-bold">95%</h6>
+                            <h6 class="font-weight-bold">Deep Learning</h6>
+                            <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="95" aria-valuemin="0"
@@ -284,8 +284,8 @@
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Wordpress</h6>
-                            <h6 class="font-weight-bold">85%</h6>
+                            <h6 class="font-weight-bold">Python</h6>
+                            <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0"
@@ -378,8 +378,8 @@
                 <div class="col-12 text-center mb-2">
                     <ul class="list-inline mb-4" id="portfolio-flters">
                         <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">Tout</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Game design</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Jeux</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Jeux de rôle</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Gamejam</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Théâtre</li>
                     </ul>
                 </div>
@@ -387,7 +387,7 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="">
+                        <img class="img-fluid rounded w-100" onmouseenter="document.body.style.backgroundColor='black'" onmouseleave="document.body.style.backgroundColor='white'" src="img/retro.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
