--- a/retro.html
+++ b/retro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="image" src="chemin/vers/votre/image.jpg" alt="Rétrospective">
+        <img class="image" src="img/firstpart.png" alt="Rétrospective">
         <div class="text-overlay">Rétrospective</div>
     </div>
 </body>
